--- a/PitchPitch/PitchPitch.csproj
+++ b/PitchPitch/PitchPitch.csproj
@@ -121,11 +121,11 @@
     <Compile Include="map\RandomEndlessMap.cs" />
     <Compile Include="map\RandomMap.cs" />
     <Compile Include="PitchPitch.cs" />
+    <Compile Include="PointD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="scene\Scene.cs" />
-    <Compile Include="scene\SceneAudioConfig.cs" />
     <Compile Include="scene\SceneEndlessGameStage.cs" />
     <Compile Include="scene\SceneGameOver.cs" />
     <Compile Include="scene\SceneGameStage.cs" />
@@ -204,7 +204,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="doc\COPYING">
+    <Content Include="doc\SDL-COPYING">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <ExtraContent Include="lib\jpeg.dll" />
