・例外発生時のエラー処理追加 ・自機情報表示の修正(画像で表示するようにした)

--- a/src/PitchPitch/PitchPitch.csproj
+++ b/src/PitchPitch/PitchPitch.csproj
@@ -207,6 +207,9 @@
     <ExtraContent Include="..\lib\zlib1.dll">
       <Link>lib\zlib1.dll</Link>
     </ExtraContent>
+    <EmbeddedResource Include="..\image\life.png">
+      <Link>image\life.png</Link>
+    </EmbeddedResource>
     <Content Include="..\licenses\IPA_Font_License_Agreement_v1.0.txt">
       <Link>licenses\IPA_Font_License_Agreement_v1.0.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
