・ランダムマップに難易度を設定 ・エンドレスマップの場合Retryできないように修正

--- a/src/PitchPitch/PitchPitch.csproj
+++ b/src/PitchPitch/PitchPitch.csproj
@@ -114,6 +114,7 @@
     </Compile>
     <Compile Include="gameobj\GameObj.cs" />
     <Compile Include="gameobj\Player.cs" />
+    <Compile Include="Scorer.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="map\BinaryChipData.cs" />
