--- a/src/PitchPitch/PitchPitch.csproj
+++ b/src/PitchPitch/PitchPitch.csproj
@@ -104,7 +104,6 @@
     </Compile>
     <Compile Include="audio\ToneAnalyzer.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="map\BasicMap.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -114,6 +113,7 @@
     </Compile>
     <Compile Include="gameobj\GameObj.cs" />
     <Compile Include="gameobj\Player.cs" />
+    <Compile Include="map\ColorsMap.cs" />
     <Compile Include="Scorer.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Logger.cs" />
@@ -134,7 +134,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="scene\Scene.cs" />
-    <Compile Include="scene\SceneEndlessGameStage.cs" />
     <Compile Include="scene\SceneError.cs" />
     <Compile Include="scene\SceneGameOver.cs" />
     <Compile Include="scene\SceneGameStage.cs" />
